[tool.poetry]
name = "discord-python"
version = "0.2.0"
description = ""
authors = ["aeither <36173828+aeither@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.4.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
